Non-zero padding is still not allowed in the tableswitch/lookupswitch instructions

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 8
    • Affects Version/s: 8
    • Component/s: client-libs
    • b82
    • x86
    • linux

      There was explicit requirement about zero padding of tableswitch/lookupswitch instructions in the JVMS 2d edition.
      However such requirement was intentionally removed in the JVMS 3d edition.
      So JVM checks on tableswitch/lookupswitch padding must be relaxed. However they are still not changed.

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Sergey Reznick (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: