7154889: Non-zero padding is still not allowed in the tableswitch/lookupswitch instructions

Do not check that the padding bytes are zero if class file format version >=51.

Reviewed-by: dholmes, coleenp, mullan, kvn